--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-github-calendar": "^3.1.2",
+    "react-github-contribution-calendar": "^2.0.0",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.2",
     "web-vitals": "^1.1.2"
