--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-github-calendar": "^3.1.2",
     "react-github-contribution-calendar": "^2.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.2",
     "three": "^0.133.1",
