--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "classnames": "^2.3.1",
+    "dotenv": "^16.0.1",
     "react": "^17.0.2",
+    "react-auto-translate": "^0.0.6",
     "react-dom": "^17.0.2",
     "react-github-calendar": "^3.1.2",
     "react-github-contribution-calendar": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.2",
+    "sass": "^1.54.0",
     "three": "^0.133.1",
     "web-vitals": "^1.1.2"
   },
