--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^0.22.0",
     "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
