--- a/package.json
+++ b/package.json
@@ -17,15 +17,13 @@
     "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
     "react": "^17.0.2",
-    "react-auto-translate": "^0.0.6",
     "react-dom": "^17.0.2",
     "react-github-calendar": "^3.1.2",
-    "react-github-contribution-calendar": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.2",
     "sass": "^1.54.0",
-    "three": "^0.133.1",
+    "three": "^0.143.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -40,16 +38,9 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
