--- a/package.json
+++ b/package.json
@@ -7,20 +7,22 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
-    "@react-three/drei": "^7.17.2",
-    "@react-three/fiber": "^7.0.17",
+    "@react-three/drei": "8.11.0",
+    "@react-three/fiber": "7.0.26",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@tippyjs/react": "^4.2.6",
+    "@types/three": "0.137.0",
     "axios": "^0.22.0",
     "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-overlay": "^6.0.9",
     "react-github-calendar": "^3.1.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-tabs": "^3.2.2",
     "sass": "^1.54.0",
     "three": "^0.143.0",
