--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-github-calendar": "^3.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "react-table": "^7.8.0",
     "react-tabs": "^3.2.2",
     "sass": "^1.54.0",
+    "styled-components": "^5.3.6",
     "three": "^0.143.0",
     "web-vitals": "^1.1.2"
   },
