--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.5",
     "react-error-overlay": "^6.0.9",
     "react-github-calendar": "^3.1.2",
     "react-router-dom": "^6.3.0",
