--- a/package.json
+++ b/package.json
@@ -3,38 +3,47 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.0.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@hot-loader/react-dom": "^17.0.2",
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
+    "@react-three/cannon": "^6.5.0",
     "@react-three/drei": "8.11.0",
     "@react-three/fiber": "7.0.26",
+    "@react-three/rapier": "^0.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@tippyjs/react": "^4.2.6",
     "@types/three": "0.137.0",
     "axios": "^0.22.0",
+    "cesium": "^1.100.0",
     "classnames": "^2.3.1",
+    "craco-cesium": "^1.2.0",
+    "craco-plugin-react-hot-reload": "^0.1.0",
     "dotenv": "^16.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.5",
     "react-error-overlay": "^6.0.9",
     "react-github-calendar": "^3.1.2",
+    "react-hot-loader": "^4.13.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "react-table": "^7.8.0",
     "react-tabs": "^3.2.2",
+    "resium": "^1.16.0",
     "sass": "^1.54.0",
     "styled-components": "^5.3.6",
     "three": "^0.143.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
