--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-draggable": "^4.4.5",
     "react-error-overlay": "^6.0.9",
     "react-github-calendar": "^3.1.2",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "react-table": "^7.8.0",
