--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "axios": "^0.22.0",
     "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
-    "react": "^17.0.2",
+    "leaflet": "^1.9.3",
+    "react": "^18.0.2",
     "react-device-detect": "^2.2.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-error-overlay": "^6.0.9",
     "react-github-calendar": "^3.1.2",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "react-table": "^7.8.0",
